# reduce_repro

./: CMakeLists.txt  run.sh  test_functor.h  test_main.cc  test_moduleA.cu  test_moduleB.cu
